--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "sails-react",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Index.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --host 0.0.0.0 --port 8080 --inline --content-base public/ --history-api-fallback",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --inline --content-base public/ --history-api-fallback",
     "start:prod": "npm run build && npm start",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
-    "build": "npm run build:client && npm run build:server"
+    "build": "npm run build:client && npm run build:server",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -19,15 +20,18 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.0.0",
-    "react-tap-event-plugin": "^1.0.0"
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.5.1",
+    "babel-jest": "^17.0.2",
     "babel-loader": "^6.2.2",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-1": "^6.16.0",
     "http-server": "^0.8.5",
+    "jest": "^17.0.3",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
