--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "Index.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --host 0.0.0.0 --inline --content-base public/ --history-api-fallback",
+    "start:dev": "webpack-dev-server --host 0.0.0.0 --port 1111 --inline --content-base public/ --history-api-fallback",
     "start:prod": "npm run build && npm start",
     "build:client": "webpack",
     "build:server": "webpack --config webpack.server.config.js",
@@ -19,8 +19,9 @@
     "material-ui": "^0.16.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^5.0.1",
     "react-router": "^2.0.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "^2.0.0",
     "redux": "^3.6.0"
   },
   "devDependencies": {
